--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.dagger_version = '2.38.1'
     ext.moshi_version = '1.13.0'
+    ext.coroutines_version = '1.6.0'
 
     repositories {
         google()
