--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
-    // test
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    // Test
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
