- adding okhttp dependencies - OkHttpTokenNetworking and corresponding tests - adding internal modifiers

--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshi_version"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
 
+    // OkHttp
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+
     // Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
