--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -30,6 +30,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -66,6 +71,10 @@ dependencies {
     testImplementation "io.mockk:mockk:1.12.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Android Test
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
