--- a/matugr/src/debug/AndroidManifest.xml
+++ b/matugr/src/debug/AndroidManifest.xml
@@ -2,5 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.matugr">
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <application>
+        <activity
+            android:name=".ui.AuthActivity"
+            android:theme="@style/Theme.AppCompat"/>
+    </application>
 </manifest>
