--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.5.31"
     ext.dagger_version = '2.38.1'
     ext.moshi_version = '1.13.0'
     ext.coroutines_version = '1.6.0'
     ext.lifecycle_version = '1.1.1'
+    ext.hilt_version = '2.38.1'
 
     repositories {
         google()
@@ -11,7 +13,10 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
