--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext.coroutines_version = '1.6.0'
     ext.lifecycle_version = '1.1.1'
     ext.hilt_version = '2.38.1'
+    ext.room_version = "2.3.0"
 
     repositories {
         google()
