--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     // Retrofit/OkHttp
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
