--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ buildscript {
     ext.coroutines_version = '1.6.0'
     ext.lifecycle_version = '1.1.1'
     ext.hilt_version = '2.38.1'
-    ext.room_version = "2.3.0"
+    ext.room_version = "2.4.1"
+    ext.secrets_version = "2.0.0"
 
     repositories {
         google()
@@ -18,6 +19,9 @@ buildscript {
 
         // Hilt
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+        // Secrets
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:$secrets_version"
     }
 }
 
