adding default properties file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
     }
 }
 
+secrets {
+    defaultPropertiesFileName = "secrets.defaults.properties"
+}
+
 dependencies {
 
     implementation project(':matugr')
