--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -4,14 +4,33 @@ plugins {
     id 'kotlin-kapt'
 }
 
+ext {
+    PUBLISH_GROUP_ID = 'io.github.judegpinto'
+    PUBLISH_VERSION = '0.1.0'
+    PUBLISH_VERSION_CODE = 1
+    PUBLISH_ARTIFACT_ID = 'matugr'
+    PUBLISH_DESCRIPTION = 'OAuth 2 Android Client SDK'
+    PUBLISH_URL = 'https://github.com/judegpinto/matugr'
+    PUBLISH_LICENSE_NAME = 'Apache License'
+    PUBLISH_LICENSE_URL = 'https://github.com/judegpinto/matugr/blob/master/LICENSE'
+    PUBLISH_DEVELOPER_ID = 'judegpinto'
+    PUBLISH_DEVELOPER_NAME = 'Jude Pinto'
+    PUBLISH_DEVELOPER_EMAIL = 'judepinto2022@gmail.com'
+    PUBLISH_SCM_CONNECTION = 'scm:git:github.com/judegpinto/matugr.git'
+    PUBLISH_SCM_DEVELOPER_CONNECTION = 'scm:git:ssh://github.com/judegpinto.git'
+    PUBLISH_SCM_URL = 'https://github.com/judegpinto/matugr/tree/master'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
+
 android {
     compileSdk 31
 
     defaultConfig {
         minSdk 26
         targetSdk 31
-        versionCode 1
-        versionName "0.1.0"
+        versionCode PUBLISH_VERSION_CODE
+        versionName PUBLISH_VERSION
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
