--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,18 +26,19 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion "$compose_version"
+        kotlinCompilerExtensionVersion "$compose_compiler_version"
     }
+    namespace 'com.matugr.sample'
 }
 
 secrets {
@@ -75,7 +76,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     // Compose
-    implementation "androidx.compose.compiler:compiler:$compose_version"
+    implementation "androidx.compose.compiler:compiler:$compose_compiler_version"
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation "androidx.compose.material:material:$compose_version"
 
