--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.6.10"
+    ext.kotlin_version = "1.8.21"
     ext.dagger_version = '2.45'
     ext.moshi_version = '1.14.0'
     ext.coroutines_version = '1.6.4'
@@ -9,6 +9,7 @@ buildscript {
     ext.room_version = "2.5.1"
     ext.secrets_version = "2.0.0"
     ext.compose_version = "1.4.3"
+    ext.compose_compiler_version = "1.4.7"
     ext.maven_publish_version = "1.1.0"
 
     repositories {
@@ -19,7 +20,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.1.3"
+        classpath 'com.android.tools.build:gradle:8.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Hilt
