--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -43,17 +43,18 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     testOptions {
         unitTests {
             includeAndroidResources = true
         }
     }
+    namespace 'com.matugr'
 }
 
 dependencies {
