--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+        // Uncomment to test local deployment
+        // mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.1'
