--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.compose_version = "1.4.3"
     ext.compose_compiler_version = "1.4.7"
     ext.maven_publish_version = "1.1.0"
+    ext.jacoco_version = '0.8.11'
 
     repositories {
         google()
@@ -33,6 +34,9 @@ buildscript {
 
         // Maven Publish
         classpath "io.github.gradle-nexus:publish-plugin:$maven_publish_version"
+
+        // Jacoco
+        classpath "org.jacoco:org.jacoco.core:$jacoco_version"
     }
 }
 
