--- a/matugr/build.gradle
+++ b/matugr/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'jacoco'
 }
 
 ext {
@@ -39,6 +40,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            testCoverageEnabled true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -48,9 +52,16 @@ android {
         jvmTarget = '17'
     }
     testOptions {
+        unitTests.all {
+            jacoco {
+                includeNoLocationClasses = true
+                excludes = ['jdk.internal.*']
+            }
+        }
         unitTests {
             includeAndroidResources = true
         }
+        unitTests.returnDefaultValues = true
     }
     publishing {
         singleVariant("release") {
@@ -112,3 +123,4 @@ dependencies {
 }
 
 apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
+apply from: "${rootProject.projectDir}/jacoco/jacoco-unit-test-reporting.gradle"
