--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,4 +34,21 @@ jobs:
     - name: Library Unit Tests
       uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
       with:
-        arguments: :matugr:testDebugUnitTest
+        arguments: :matugr:jacocoTestReport
+
+    - name: generate report
+      uses: actions/upload-artifact@v4
+      with:
+        name: report
+        path: matugr/build/reports/jacoco/jacocoTestReport
+
+    - name: Download Test Reports Folder
+      uses: actions/download-artifact@v4
+      with:
+        name: report
+        path: matugr/build/reports/jacoco/jacocoTestReport
+
+    - name: Upload Test Report
+      uses: codecov/codecov-action@v3
+      with:
+        files: "matugr/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
