--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,17 +36,17 @@ jobs:
       with:
         arguments: :matugr:jacocoTestReport
 
-    - name: generate report
-      uses: actions/upload-artifact@v4
-      with:
-        name: report
-        path: matugr/build/reports/jacoco/jacocoTestReport
-
-    - name: Download Test Reports Folder
-      uses: actions/download-artifact@v4
-      with:
-        name: report
-        path: matugr/build/reports/jacoco/jacocoTestReport
+#    - name: generate report
+#      uses: actions/upload-artifact@v4
+#      with:
+#        name: report
+#        path: matugr/build/reports/jacoco/jacocoTestReport
+#
+#    - name: Download Test Reports Folder
+#      uses: actions/download-artifact@v4
+#      with:
+#        name: report
+#        path: matugr/build/reports/jacoco/jacocoTestReport
 
     - name: Upload Test Report
       uses: codecov/codecov-action@v3
